--- a/4.myself.html
+++ b/4.myself.html
@@ -13,6 +13,18 @@
     div{
       border:5px solid gray;
     }
+    body{
+      margin:0;
+    }
+    ol{
+      border-right:1px solid gray;
+      width:100px;
+      margin:0;
+      padding:20px;
+    }
+    h1{
+      text-align: center
+    }
     </style>
 </head>
 <body>
@@ -24,14 +36,15 @@
     <li><a href="3.html">JavaScript</a></li>
     <li><a href="4.myself.html">느낀점</a></li>
     <li><a href="5.final.html">양재훈</a></li>
+    <li><a href="lastwordgame.html">끝말잇기</a></li>
   </ol>
-  <div>
     <div id="article">
       <h2>느낀점</h2>
     <li>생활코딩님의 강의는 귀에 쏙쏙들어 왔지만 제로초님의 강의는 실제로 간단한 게임을 만드는 프로그래밍을 가르쳐주셔서 그런지 입문자에게는 조금 힘들었습니다.</li>
     <li>입문자인 만큼 반복해서 여러번 들어야 하는데 한번씩 밖에 못봐서 내용전체를 이해하지는 못한 것 같아 아쉬웠습니다.</li>
     <li>스터디 활동 덕분에 web쪽을 공부할 수 있었고 이 부분을 더 공부하게 되면 멋진 웹사이트를 제작할 수 있을 것 같은 자신감이 생겼습니다.</li>
     <img src="hi.jpg" width="50%">
+  </div>
 </div>
 </body>
 </html>
