--- a/1.html
+++ b/1.html
@@ -10,9 +10,23 @@
       display:grid;
       grid-template-colums: 150px 1fr;
     }
+    body{
+      margin:0;
+    }
     div{
       border:5px solid gray;
     }
+    ol{
+      border-right:1px solid gray;
+      width:100px;
+      margin:0;
+      padding:20px;
+    }
+    h1{
+      text-align: center
+      font-size:500px;
+    }
+
     </style>
 </head>
 <body>
@@ -25,16 +39,17 @@
     <li><a href="3.html">JavaScript</a></li>
     <li><a href="4.myself.html">느낀점</a></li>
     <li><a href="5.final.html">양재훈</a></li>
+    <li><a href="lastwordgame.html">끝말잇기</a></li>
   </ol>
-  <div id="article">
-  <h2>HTML</h2>
-    <p><a href="https://www.w3.org/TR/html4/"
+      <div id="article">
+      <h2>HTML</h2>
+      <p><a href="https://www.w3.org/TR/html4/"
       target="_blank" title="html4
       speicification"><strong><u>Hypertext Markup Language (HTML)</strong></u></a> is the standard markup language for creating web pages and web applications.Web browsers receive HTML documents from a web server or from loval storage and render them into multimedia web pages. HTML decribes the structure of a web page semantically and originally included cuse for the appearance of the document.
     <img src="coding.jpg" width="100%">
     </p><p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded ito the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
     </p>
+    </div>
   </div>
-</div>
 </body>
 </html>
