--- a/2.html
+++ b/2.html
@@ -10,8 +10,20 @@
       display:grid;
       grid-template-colums: 150px 1fr;
     }
+    body{
+      margin:0;
+    }
     div{
       border:5px solid gray;
+    }
+    ol{
+      border-right:1px solid gray;
+      width:100px;
+      margin:0;
+      padding:20px;
+    }
+    h1{
+      text-align: center
     }
     </style>
 </head>
@@ -24,9 +36,10 @@
     <li><a href="3.html">JavaScript</a></li>
     <li><a href="4.myself.html">느낀점</a></li>
     <li><a href="5.final.html">양재훈</a></li>
+    <li><a href="lastwordgame.html">끝말잇기</a></li>
   </ol>
-  <div>
-    <div id="article">
+
+      <div id="article">
       <h2>CSS</h2>
       <p>
           웹 문서의 전반적인 스타일을 미리 저장해 둔 스타일시트이다. 문서 전체의 일관성을 유지할 수 있고, 세세한 스타일 지정의 필요를 줄어들게 하였다.
@@ -37,7 +50,7 @@
           따라서 웹 개발자들은 보다 풍부한 디자인으로 웹을 설계할 수 있고, 글자의 크기, 글자체, 줄간격, 배경 색상, 배열위치 등을 자유롭게 선택하거나 변경할 수 있으며 유지·보수도 간편하게 할 수 있다.
           <img src="CSS.jpg" width="80%">
       </p>
-  </div>
+    </div>
 </div>
 </body>
 </html>
