--- a/5.final.html
+++ b/5.final.html
@@ -13,6 +13,18 @@
     div{
       border:5px solid gray;
     }
+    ol{
+      border-right:1px solid gray;
+      width:100px;
+      margin:0;
+      padding:20px;
+    }
+    body{
+      margin:0;
+    }
+    h1{
+      text-align: center
+    }
     </style>
 </head>
 <body>
@@ -24,15 +36,15 @@
     <li><a href="3.html">JavaScript</a></li>
     <li><a href="4.myself.html">느낀점</a></li>
     <li><a href="5.final.html">양재훈</a></li>
+    <li><a href="lastwordgame.html">끝말잇기</a></li>
   </ol>
-  <div>
     <div id="article">
       <h2>양재훈</h2>
       <li>스마트시스템소프트웨어학과</li>
       <li>19학번</li>
       <li>지옥행열차</li>
       <img src="yang.jpg" width="10%">
-
+</div>
 </div>
 </body>
 </html>
