--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     div{
       border:5px solid gray;
     }
+    ol{
+      border-right:1px solid gray;
+      width:100px;
+      margin:0;
+      padding:20px;
+    }
+    body{
+      margin:0;
+    }
+    h1{
+      text-align: center
+    }
     </style>
 </head>
 <body>
@@ -24,6 +36,7 @@
       <li><a href="3.html">JavaScript</a></li>
       <li><a href="4.myself.html">느낀점</a></li>
       <li><a href="5.final.html">양재훈</a></li>
+      <li><a href="lastwordgame.html">끝말잇기</a></li>
     </ol>
   <div id="article">
   <h2>WEB</h2>
